added usage of PaperSummary, fixed remaining bugs